Create header and add content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="search">
+            <img class="icon" src="icons/search-icon.png" alt="Search icon">
+            <input type="search">
+            <img class="icon" src="icons/alarm-icon.png" alt="Notification">
+            <img class="profile-pic" src="images/Afang-soup 828x701.jpg" alt="Profile picture">
+            <div>Henry Moses</div>
+        </div>
+        <div class="user-main">
+            <div class="user">
+                <img class="profile-pic large" src="images/Afang-soup 828x701.jpg" alt="Profile picture">
+                <div>
+                    <div>Hi there</div>
+                    <div class="username">Henry Moses (@hencci)</div>
+                </div>    
+            </div>
+            <div class="buttons-buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>    
+            </div>
+        </div>
+    </header>
     
 </body>
 </html>
