--- a/index.html
+++ b/index.html
@@ -30,6 +30,52 @@
             </div>
         </div>
     </header>
+    <aside>
+        <div class="dashboard">
+            <img src="icons/icons8-dashboard-24.png" alt="Dashboard icon">
+            <div>Dashboard</div>
+        </div>
+        <ul>
+            <li>
+                <img src="icons/home-icon.svg" alt="Home icon">
+                <div>Home</div>
+            </li>
+            <li>
+                <img src="icons/profile.png" alt="Profile icon">
+                <div>Profile</div>
+            </li>
+            <li>
+                <img src="icons/messages-icon.png" alt="Messages icon">
+                <div>Messages</div>
+            </li>
+            <li>
+                <img src="icons/history-icon.png" alt="History icon">
+                <div>History</div>
+            </li>
+            <li>
+                <img src="icons/tasks-icon.png" alt="Tasks icon">
+                <div>Tasks</div>
+            </li>
+            <li>
+                <img src="icons/group-icon.png" alt="Communities icon">
+                <div>Communities</div>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <img src="icons/settings-icon.png" alt="Settings icon">
+                <div>Settings</div>
+            </li>
+            <li>
+                <img src="icons/support-icon.png" alt="Support icon">
+                <div>Support</div>
+            </li>
+            <li>
+                <img src="icons/protect-icon.png" alt="Privacy icon">
+                <div>Privacy</div>
+            </li>
+        </ul>
+    </aside>
     
 </body>
 </html>
