Create main section and add content

--- a/index.html
+++ b/index.html
@@ -76,6 +76,109 @@
             </li>
         </ul>
     </aside>
+    <main>
+        <div class="projects">
+            <div class="title">Your Projects</div>
+            <div class="projects-main">
+                <div>
+                    <div class="name">Super Cool Project</div>
+                    <div>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</div>
+                    <div class="pro-icons">
+                        <img class="icon" src="icons/favorite-icon.png" alt="Favorite Icon.">
+                        <img class="icon" src="icons/watched-icon.png" alt="Watched Icon.">
+                        <img class="icon" src="icons/share-icon.png" alt="Share Icon.">
+                    </div>
+                </div>
+                <div>
+                    <div class="name">Less Cool Project</div>
+                    <div>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</div>
+                    <div class="pro-icons">
+                        <img class="icon" src="icons/favorite-icon.png" alt="Favorite Icon.">
+                        <img class="icon" src="icons/watched-icon.png" alt="Watched Icon.">
+                        <img class="icon" src="icons/share-icon.png" alt="Share Icon.">
+                    </div>
+                </div>
+                <div>
+                    <div class="name">Impossible App</div>
+                    <div>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</div>
+                    <div class="pro-icons">
+                        <img class="icon" src="icons/favorite-icon.png" alt="Favorite Icon.">
+                        <img class="icon" src="icons/watched-icon.png" alt="Watched Icon.">
+                        <img class="icon" src="icons/share-icon.png" alt="Share Icon.">
+                    </div>
+                </div>
+                <div>
+                    <div class="name">Easy Peasy App</div>
+                    <div>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</div>
+                    <div class="pro-icons">
+                        <img class="icon" src="icons/favorite-icon.png" alt="Favorite Icon.">
+                        <img class="icon" src="icons/watched-icon.png" alt="Watched Icon.">
+                        <img class="icon" src="icons/share-icon.png" alt="Share Icon.">
+                    </div>
+                </div>
+                <div>
+                    <div class="name">Ad Blocker</div>
+                    <div>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</div>
+                    <div class="pro-icons">
+                        <img class="icon" src="icons/favorite-icon.png" alt="Favorite Icon.">
+                        <img class="icon" src="icons/watched-icon.png" alt="Watched Icon.">
+                        <img class="icon" src="icons/share-icon.png" alt="Share Icon.">
+                    </div>
+                </div>
+                <div>
+                    <div class="name">Money Maker</div>
+                    <div>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</div>
+                    <div class="pro-icons">
+                        <img class="icon" src="icons/favorite-icon.png" alt="Favorite Icon.">
+                        <img class="icon" src="icons/watched-icon.png" alt="Watched Icon.">
+                        <img class="icon" src="icons/share-icon.png" alt="Share Icon.">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="announcements">
+            <div class="title">Announcements</div>
+            <div class="announcements-main">
+                <div>
+                    <div class="anno-title">Site Maintenance</div>
+                    <div>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sodales congue...</div>
+                </div>
+                <div>
+                    <div class="anno-title">Community Share Day</div>
+                    <div>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsan porttitor...</div>
+                </div>
+                <div>
+                    <div class="anno-title">Updated Privacy Policy</div>
+                    <div>Phasellus efficitur nisi egit elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</div>
+                </div>
+            </div>
+        </div>
+        <div class="trending">
+            <div class="title">Trending</div>
+            <div class="trending-main">
+                <img class="profile-pic" src="images/Afang-soup 828x701.jpg" alt="profile1">
+                <div>
+                    <div>@thor</div>
+                    <div>World Peace Builder</div>
+                </div>
+                <img class="profile-pic" src="images/okra_soup 281x179.jpg" alt="profile2">
+                <div>
+                    <div>@hencci</div>
+                    <div>Super Cool Project</div>
+                </div>
+                <img class="profile-pic" src="images/okra_soup 281x179.jpg" alt="profile3">
+                <div>
+                    <div>@odin</div>
+                    <div>Life Changing App</div>
+                </div>
+                <img class="profile-pic" src="images/okra_soup 281x179.jpg" alt="profile4">
+                <div>
+                    <div>@ironman</div>
+                    <div>No traffic Maker</div>
+                </div>
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
